bahai_songs.css
/* //////////////////////////////// Songs //////////////////////////////// */

html {
    font-size: 1px;
}

.outerDiv {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.flex-row {
    display: flex;
    flex-direction: row;

    /* align-items: center; */
}

.songColumn {
    vertical-align: top;
    padding: 0 10rem 40rem;
}

.songLyric {
    text-align: center;
    font-size: 20rem;

    margin: 0;
    padding-top: 6rem;
}

/* .repetitions {
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
} */

.bold {
    font-weight: bold;
}

.blankDiv {
    padding-top: 15rem;
}

body {
    background-color: #f0f0f0;
    margin-bottom: var(--body-margin-bottom);
}

.songHeader {
    text-align: center;
    font-size: 32rem;
    margin: 0;
    padding-top: 40rem;
    padding-bottom: 10rem;
}

p {
    font-family: Arial, Helvetica, sans-serif;
}

a {
    text-align: center;

    font-size: 16rem;
    padding-bottom: 20rem;
}

.sansLink {
    font-size: 20rem;
    font-family: Arial, Helvetica, sans-serif;
    color: black;
}

.mainMenuThemeDiv {
    display: flex;
    flex-direction: column;

    align-items: center;
}

.greenDivider {
    max-width: 150rem;

    margin: 25rem;
}

/* ////////////////////////////// Main Menu ////////////////////////////// */

.mainMenuBtn {
    text-align: center;
    font-size: 20rem;

    margin: 0;
    padding: 8rem;

    border-radius: 10rem;

    cursor: pointer;
}

.mainMenuBtn:hover {
    background: var(--main-menu-hover);
}

.mainMenuHeader {
    text-align: center;
    font-size: 32rem;
    margin: 0;
}

#mainMenu {
    padding: 40rem 0;
    transition: 0.3s ease;
    overflow: auto;
}

#mainMenu.sidebarPadding {
    padding-left: var(--sidebar-padding);
}

#contentDiv {
    transition: 0.3s ease;
}

#contentDiv.sidebarPadding {
    padding-left: var(--sidebar-padding);
}

/* //////////////////////////////// Footer /////////////////////////////// */

.footer {
    position: fixed;
    bottom: calc(0px - var(--footer-height));
    left: 0;
    width: 100vw;
    height: var(--footer-height);

    transition: bottom 0.3s ease;

    box-sizing: border-box;
    padding: 12rem 16rem;

    background-color: var(--footer-color);
    border-top: 3rem solid black;

    display: flex;
    justify-content: center;
    gap: 12rem;
}

#footer-toggle:checked~.footer {
    bottom: 0;
}

.footerBtn {
    border: 2rem solid black;
    border-radius: 10rem;
    background: var(--sidebar-color-dark);

    font-size: 20rem;

    cursor: pointer;

    width: 100rem;
}

.footerBtn:hover {
    background: var(--footer-color);
}

/* ////////////////////////// Position Indicator ///////////////////////// */

#positionIndicator {
    position: fixed;
    transition: bottom 0.2s ease;

    bottom: -5vh;
    margin: 0;

    left: 50%;
    transform: translateX(-50%);
    text-align: center;

    display: flex;
    flex-direction: row;
}

#positionIndicator.open {
    bottom: var(--footer-height);
}

#positionIndicatorDiv {
    display: flex;
    flex-direction: row;
}

.positionIndicatorCircle {
    margin: 0;

    width: 30rem;
    height: auto;
    aspect-ratio: 1;
    font-size: 32rem;

    cursor: default;
}

.positionIndicatorCircle.filled {
    cursor: pointer;
}

.positionIndicatorCircle.filled:hover {
    background: var(--main-menu-hover);
}

.positionIndicatorCircle.left {
    padding-bottom: 2rem;
    border-top-left-radius: 15rem;
    border-bottom-left-radius: 15rem;
}

.positionIndicatorCircle.right {
    padding-bottom: 2rem;
    border-top-right-radius: 15rem;
    border-bottom-right-radius: 15rem;
}

/* /////////////////////////////// Sidebar /////////////////////////////// */

#sidebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;

    width: var(--sidebar-width);
    padding-left: 0;

    background: var(--sidebar-color);
    z-index: 100;

    transform: translateX(var(--negative-sidebar-width));
    transition: transform 0.3s ease;

    display: flex;
    flex-direction: column;
    overflow-y: auto;
}

#sidebar::-webkit-scrollbar {
    width: 10rem;
}

#sidebar::-webkit-scrollbar-track {
    background: var(--sidebar-color);
}

#sidebar::-webkit-scrollbar-thumb {
    background: var(--sidebar-color-light);
    border-radius: 10rem;
}

#sidebar::-webkit-scrollbar-thumb:hover {
    background: var(--sidebar-color-dark);
}

#sidebar.open {
    transform: translateX(0);
}

.sidebarDiv {
    margin-left: 10rem;
    margin-right: 10rem;

    display: flex;
    flex-direction: column;
}

#sidebarPlaylistViewer {
    flex: 1 0 auto;
    min-height: 0;

    align-items: center;

    padding-top: 20rem;
    padding-bottom: var(--sidebar-middle-padding);
    transition: 0.3s ease-out;
}

#sidebarPlaylistViewer.open {
    padding-bottom: var(--sidebar-middle-padding-edit);
}

#sidebarPlaylistViewerOverflow {
    overflow: hidden;
    border: 3rem solid black;
    border-radius: 12rem;
    width: 100%;
}

#sidebarBottom {
    flex-shrink: 0;

    display: flex;
    flex-direction: column-reverse;
    /* todo: make this not reverse */
    align-items: center;
    justify-content: center;
}

.sidebarBtnVertical {
    background: red;
}

.sidebarBtn {
    width: calc(var(--sidebar-width-no-padding) * 0.8);
    text-align: center;

    margin-top: 15rem;
    padding: 0;

    border: 2rem solid black;
    border-radius: 10rem;
    background: var(--sidebar-color-dark);

    font-size: 20rem;

    cursor: pointer;
}

.sidebarBtn.moving {
    position: absolute;
    left: var(--negative-sidebar-width);
    transition: left 0.3s ease;
}

.sidebarBtn.moving.open {
    left: calc(var(--sidebar-width-no-padding) * 0.1 + 10rem);
}

.sidebarBtnVertical {
    height: 42rem;
}

.sidebarBtn:not(:disabled):hover {
    background: var(--sidebar-color);
}

.sidebarBtn:disabled {
    background: var(--sidebar-color);
    color: var(--sidebar-button-disabled-text);
    cursor: not-allowed;
}

.sidebarText {
    font-size: 32rem;
    color: black;

    text-align: center;

    margin: 0;
}

.icon {
    width: 20rem;
    height: 20rem;
    object-fit: contain;
}

#sidebarPlaylistHowTo {
    position: absolute;
    width: calc(var(--sidebar-width-no-padding) * 0.8);

    left: var(--negative-sidebar-width);
    transition: left 0.3s ease;

    font-size: 24rem;
    text-align: center;

    margin-bottom: 0;
}

#sidebarPlaylistHowTo.open {
    left: calc(var(--sidebar-width-no-padding) * 0.1 + 10rem);
}

#sidebarShadow {
    position: fixed;

    height: 100vh;
    width: 20vw;
    top: 0;
    left: -20vw;

    z-index: 50;

    transition: left 0.3s ease;
}

#sidebarShadow.open {
    left: 0;
    box-shadow: 4rem 0 8rem rgba(0, 0, 0, 0.6);
}

/* Toggle button */
#sidebarToggleBtn {
    position: fixed;
    top: 0;
    left: -1rem;

    background: var(--sidebar-color);
    border: none;
    border-bottom-right-radius: 30rem;
    box-shadow: 4rem 4rem 8rem rgba(0, 0, 0, 0.6);

    width: 60rem;
    height: 60rem;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: none;

    cursor: pointer;

    transition: transform 0.3s ease;
    z-index: 75;
}

#sidebarToggleBtn.open {
    transform: translateX(var(--sidebar-width));
}

#sidebarToggleBtn img {
    display: block;
    width: 35rem;
    height: auto;
}

.sidebarOverlay {
    position: fixed;
    top: 20vh;
    left: calc(-20rem - var(--sidebar-width-no-padding));

    width: var(--sidebar-width-no-padding);
    height: 60vh;

    background: var(--sidebar-color-dark);
    z-index: 200;

    border: 3rem solid black;
    border-radius: 12rem;

    /* Todo: add this padding without making the box overflow on thin pc screens */
    /* padding-left: 10rem; */
    /* padding-right: 10rem; */

    display: flex;
    flex-direction: column;
    justify-content: center;

    transition: left 0.25s ease;
}

.sidebarOverlay.open {
    left: 7rem;
}

.sidebarBtn.highlighted {
    color: gold;
    border-color: gold;
    box-shadow: 0 0 10rem rgba(255, 215, 0, 0.6);
    background-color: var(--sidebar-color);
    font-weight: bold;
}

/* Stuff regarding playlistViewer */

#playlistViewerIntro {
    padding-bottom: 4rem;
}

.playlistViewerRow {
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: center;

    min-height: 52rem;

    padding-top: 8rem;
    padding-bottom: 8rem;
    padding-left: 4rem;
    padding-right: 4rem;

    border: 3px solid var(--sidebar-color);
}

.playlistViewerRow.alternating {
    background: var(--sidebar-color-light);
    border-color: var(--sidebar-color-light);
}

.playlistViewerRow.edit {
    padding-right: 0;
    cursor: grab;
}

.playlistViewerRow.edit:active {
    cursor: grabbing;
}

.playlistViewerRow p {
    font-size: 22rem;
    color: black;

    width: 100%;
    margin: 0;
}

.playlistViewerRow.edit p {
    width: calc(100% - min(20%, 50rem));
}

.playlistViewerRow button {
    width: 40rem;
    height: 40rem;
    margin: 0 calc(min(10% - 20rem, 5rem));

    padding: 0;
    background: none;
    border: none;
    border-radius: 100%;

    cursor: pointer;

    display: none;
}

.playlistViewerRow.edit button {
    display: block;
}

.playlistViewerRow button:hover {
    background: #b2b2b2;
}

.playlistViewerRow img {
    max-width: 50%;
    aspect-ratio: 1 / 1;
    max-height: 20rem;
}

.playlistViewerRow.dragging {
    border-color: gold;
}

.playlistViewerRow.dragging p {
    opacity: 0;
}

.playlistViewerRow.ghost {
    position: absolute;
    left: -1000vw;

    width: calc(var(--sidebar-width-no-padding) - 9rem);
    /* Shouldn't be using --sidebar-width-no-padding */
    border-color: var(--footer-color);

    background: var(--footer-color);
}

.playlistViewerRow.ghost p {
    opacity: 1;
}

/* ///////////////////// Leave at bottom of CSS page ///////////////////// */

@media (max-width: 599px) {
    :root {
        --sidebar-width: calc(100vw - 58rem);
        --sidebar-padding: 0;
    }

    .pc {
        display: none;
    }

    .songHeader {
        padding-left: 40rem;
        padding-right: 40rem;
    }
}

@media (min-width: 600px) {
    :root {
        --sidebar-width: 20vw;
        --sidebar-padding: var(--sidebar-width);
    }
}

:root {
    /* Colors */
    --sidebar-color: #8fc0ff;
    --sidebar-color-dark: #46a7ff;
    --sidebar-color-light: #bbd6ff;

    --sidebar-button-disabled-background: #c6dcff;
    --sidebar-button-disabled-text: #565656;

    --footer-color: #0073cd;

    --main-menu-hover: #e0e0e0;

    /* Positioning */
    --negative-sidebar-width: calc(0px - var(--sidebar-width));
    --sidebar-width-no-padding: calc(var(--sidebar-width) - 20rem);

    --footer-height: 10vh;
    --body-margin-bottom: var(--footer-height);

    /* Set using JavaScript */
    --sidebar-middle-padding: 0;
    --sidebar-middle-padding-edit: 0;
}

.hide {
    display: none;
}

.doubleHide {
    display: none;
}

.dragHide {
    height: 0;
}

.checkbox-toggle-hide {
    display: none
        /* Comment this section to show checkboxes for testing purposes */
}

.noPadding {
    padding: 0;
}

